Fixed the text of footer in mobile mode being too big.

--- a/style.css
+++ b/style.css
@@ -199,6 +199,29 @@ footer {
     margin-top: 2rem;
 }
 
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 50rem;
+    padding-inline: 10rem;
+    padding-bottom: 2rem;
+    border-radius: 3px;
+    background-color: #f9f9f9;
+    border: solid 2px lightgray;
+    margin: 0 auto;
+}
+
+.contact-form label {
+    margin-top: 1rem;
+}
+
+.contact-form input, .contact-form textarea, .contact-form button {
+    padding: 0.5rem;
+    border-radius: 3px;
+    border: solid 2px lightgray;
+    margin-top: 0.5rem;
+}
+
 @media (max-width: 768px) {
     .nav-links {
         display: none; /* Ukryte menu domyślnie */
@@ -230,6 +253,14 @@ footer {
     .car-grid {
         flex-direction: column;
         align-items: center;
+    }
+
+    .contact-form {
+        padding-inline: 2rem;
+    }
+
+    footer {
+        font-size: 0.9rem;
     }
 }
 
@@ -294,18 +325,3 @@ footer {
     margin-bottom: 2rem;
 }
 
-.contact-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 400px;
-    margin: 0 auto;
-}
-
-.contact-form label {
-    margin-top: 1rem;
-}
-
-.contact-form input, .contact-form textarea, .contact-form button {
-    padding: 0.5rem;
-    margin-top: 0.5rem;
-}
